--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,23 +1,38 @@
 [supervisord]
 nodaemon=true
+user=root
 
 [program:sogod]
 command=/etc/service/sogod/run
 autostart=true
-autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+autorestart=unexpected
+startsecs=30
+startretries=5
+stdout_logfile=/var/log/sogod_stdout.log
+stderr_logfile=/var/log/sogod_stderr.log
+stdout_logfile_maxbytes=50MB
+stderr_logfile_maxbytes=50MB
+stdout_logfile_backups=10
+stderr_logfile_backups=10
 
 [program:apache2]
 command=/etc/service/apache2/run
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/var/log/apache2_stdout.log
+stderr_logfile=/var/log/apache2_stderr.log
+stdout_logfile_maxbytes=50MB
+stderr_logfile_maxbytes=50MB
+stdout_logfile_backups=10
+stderr_logfile_backups=10
 
 [program:memcached]
 command=/etc/service/memcached/run
 autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/var/log/memcached_stdout.log
+stderr_logfile=/var/log/memcached_stderr.log
+stdout_logfile_maxbytes=50MB
+stderr_logfile_maxbytes=50MB
+stdout_logfile_backups=10
+stderr_logfile_backups=10
